src/main/resources/kubernetes/ingress/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
    - host: www.my-site-1.com
      http:
        paths:
        - pathType: Prefix
          path: "/v1/persistence"
          backend:
            service:
              name: main
              port:
                number: 8080
    - host: www.my-site-2.com
      http:
        paths:
        - pathType: Prefix
          path: "/v1/persistence"
          backend:
            service:
              name: web1
              port:
                number: 8080
    - host: www.my-site-3.com
      http:
        paths:
        - pathType: Prefix
          path: "/v1/persistence"
          backend:
            service:
              name: web2
              port:
                number: 8080
